syntax = "proto3";
package push;
option java_multiple_files = true;
option java_package = "violet.gateway.common.proto_gen.push";
option go_package = "/proto_gen/push";

import "proto/common.proto";
import "proto/im.proto";

enum PacketType{
  PacketType_Not_Use = 0;
  Connect = 1;
  Heartbeat = 2;
  Normal = 3;
  Command = 4;
}

message PushRequest{
  int64 user_id = 1;
  int64 user_con_index = 2;
  int64 pre_user_con_index = 3;
  int64 badge_count = 4;
  int64 user_cmd_index = 5;
  im.MessageBody msg_body = 6;
}
message PushResponse{
  common.BaseResp baseResp = 255;
}

service PushService{
  rpc Push(PushRequest) returns (PushResponse);
}